# p5-employee-attrition-api

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  mlflow.db  pyproject.toml  requirements.runtime.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  predict.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/db/: __init__.py  base.py  session.py
app/db/models/: __init__.py  tracking.py
app/ml/: __init__.py  loader.py  predictor.py  preprocess.py
app/schemas/: __init__.py  health.py  prediction.py
app/services/: __init__.py  prediction_service.py
artifacts/model/: MLmodel  conda.yaml  input_example.json  metadata.json  model.pkl  preprocessing_reference.json  serving_input_example.json
data/processed/: df_EDA.csv  df_MODEL.csv
deploy/huggingface/: README.md
docs/: maintenance_protocol.md  p5_demo_exploitation.md  p5_trace.md
docs/architecture/: overview.md
notebooks/: 01_EDA.ipynb  02_FEATURE_ENGINEERING.ipynb  03_MODELISATION_BASELINE.ipynb  04_MODELISATIONS_AMELIOREES.ipynb
scripts/: create_db.py  export_model_to_mlflow.py  import_model.py  seed_data.py
sql/: queries.sql  schema.sql
tests/integration/: test_prediction_tracking.py  test_seed_data.py
tests/unit/: test_app.py  test_config.py  test_predict.py  test_predictor.py
ui/: streamlit_app.py
