[project]
name = "p5-employee-attrition-api"
version = "0.1.0"
description = "Production-ready ML API for employee attrition prediction"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]